--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
   <section>
     <a href="/interview">Criar tipo de entrevista</a>
+    <a href="/speciality">Criar especialidade</a>
     <a href="/schedule">Gerar agenda :)</a>
   </section>
 </body>
