--- a/src/views/interviews.ejs
+++ b/src/views/interviews.ejs
@@ -10,6 +10,7 @@
   <section>
     <a href="/interview">Criar tipo de entrevista</a>
     <a href="/speciality">Criar especialidade</a>
+    <a href="/candidate">Criar pessoa candidata</a>
     <a href="/schedule">Gerar agenda :)</a>
   </section>
 
